--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     <input type="text" class="search-course" placeholder="Search Course...">
-    <div class="result" style="display:none">Not Results Found</div>
+    <div class="result" style="display:none"><script > alert("No Results Found"); </script> No Results Found</div>
 
-    <div class="row cardItems">
+    <div class="row cardItems no-gutters">
       <div class="col-lg-6" data-search="python django">
         <div class="card inner_card_background m-2 p-2">
           <div class="card-img-top p-2 img-fluid">
