--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <input type="text" class="search-course" placeholder="Search Course...">
-    <div class="result" style="display:none"><script > alert("No Results Found"); </script> No Results Found</div>
+    <div class="result" style="display:none">No Results Found</div>
 
     <div class="row cardItems no-gutters">
       <div class="col-lg-6" data-search="python django">
